# wsl_open_browser

./: Cargo.toml  LICENSE  README.md  agent.sh
automation_tasks_rs/: Cargo.toml  agent.sh
automation_tasks_rs/src/: main.rs
docs/: crates.js  index.html  search-index.js  settings.html  source-files.js
docs/implementors/unwrap/: trait.VerboseUnwrapErr.js
docs/src/unwrap/: lib.rs.html
docs/src/wsl_open_browser/: lib.rs.html
docs/unwrap/: all.html  index.html  macro.unwrap.html  macro.unwrap_err.html  trait.VerboseUnwrap.html  trait.VerboseUnwrapErr.html
docs/wsl_open_browser/: all.html  fn.new_process_for_browser.html  fn.open_browser.html  fn.open_browser_from_path.html  index.html  sidebar-items.js
src/: lib.rs
