[package]
name = "wsl_open_browser"
version = "2021.822.842"
authors = ["bestia.dev"]
edition = "2018"
description = "Inside WSL2 opens a html file in the browser that is in Win10. The local file path is transformed between Linux and Win10 notation."
repository = "https://github.com/bestia-dev/wsl_open_browser"
readme = "README.md"
license = "MIT"
keywords = ["rust", "make"]
categories = ["development-tools::build-utils"]
# publish as a cargo tool. Only this files.
publish = true
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/*"
]

[dependencies]
unwrap="1.2.1"

